--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-particles-js": "^3.4.1",
     "react-scripts": "4.0.1",
+    "react-typed": "^1.2.0",
+    "react-typing-effect": "^2.0.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
